fix alignment

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -81,7 +81,7 @@
    ========================================================================== */
 
 .author__avatar {
-  display: table-cell;
+  //display: table-cell;
   vertical-align: top;
   width: 100%;
   // set width only, for non-square avatars
